--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "sonata-project/news-bundle": "^3.0"
+        "sonata-project/news-bundle": "^3.0",
+        "sonata-project/block-bundle": "^3.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
