--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,3 +6,18 @@ news:
     resource: '@SonataNewsBundle/Resources/config/routing/news.xml'
     prefix: /news
 
+admin:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
+
+sonata_user_admin:
+    resource: '@SonataUserBundle/Resources/config/routing/admin_security.xml'
+
+sonata_media_pixlr:
+    resource: '@SonataMediaBundle/Resources/config/routing/pixlr.xml'
+    prefix:   /media
