--- a/app/config/sonata_admin.yml
+++ b/app/config/sonata_admin.yml
@@ -106,86 +106,86 @@ sonata_admin:
 #                    - sonata.demo.admin.color
 #                    - sonata.demo.admin.material
 
-    assets:
-        stylesheets:
-            # The sandbox includes default pre-optimized version of some css and js
-            # So you can either use them, and add your custom assets here
-            #   ~ or ~
-            # tweak the assetic.yml and the following lines
-#            - assetic/sonata_admin_css.css
-#            - assetic/sonata_formatter_css.css
-#            - assetic/sonata_jqueryui_css.css
-#            - bundles/sonatademo/css/demo.css
-
-            - bundles/sonataformatter/markitup/skins/sonata/style.css
-            - bundles/sonataformatter/markitup/sets/markdown/style.css
-            - bundles/sonataformatter/markitup/sets/html/style.css
-            - bundles/sonataformatter/markitup/sets/textile/style.css
-            - bundles/sonatacore/vendor/bootstrap/dist/css/bootstrap.min.css
-            - bundles/sonatacore/vendor/components-font-awesome/css/font-awesome.min.css
-            - bundles/sonatacore/vendor/ionicons/css/ionicons.min.css
-            - bundles/sonataadmin/vendor/admin-lte/dist/css/AdminLTE.css
-            - bundles/sonataadmin/vendor/jqueryui/themes/flick/jquery-ui.min.css
-            - bundles/sonatacore/vendor/select2/select2.css
-            - bundles/sonatacore/vendor/select2/select2-bootstrap.css
-            - bundles/sonataadmin/vendor/x-editable/dist/bootstrap3-editable/css/bootstrap-editable.css
-            - bundles/sonataadmin/css/styles.css
-            - bundles/sonataadmin/css/layout.css
-#            - bundles/sonatapage/sonata-page.back.min.css
-
-        javascripts:
-#            - assetic/sonata_admin_js.js
-#            - assetic/sonata_jqueryui_js.js
-#            - assetic/sonata_formatter_js.js
+#    assets:
+#        stylesheets:
+#            # The sandbox includes default pre-optimized version of some css and js
+#            # So you can either use them, and add your custom assets here
+#            #   ~ or ~
+#            # tweak the assetic.yml and the following lines
+##            - assetic/sonata_admin_css.css
+##            - assetic/sonata_formatter_css.css
+##            - assetic/sonata_jqueryui_css.css
+##            - bundles/sonatademo/css/demo.css
+#
+#            - bundles/sonataformatter/markitup/skins/sonata/style.css
+#            - bundles/sonataformatter/markitup/sets/markdown/style.css
+#            - bundles/sonataformatter/markitup/sets/html/style.css
+#            - bundles/sonataformatter/markitup/sets/textile/style.css
+#            - bundles/sonatacore/vendor/bootstrap/dist/css/bootstrap.min.css
+#            - bundles/sonatacore/vendor/components-font-awesome/css/font-awesome.min.css
+#            - bundles/sonatacore/vendor/ionicons/css/ionicons.min.css
+#            - bundles/sonataadmin/vendor/admin-lte/dist/css/AdminLTE.css
+#            - bundles/sonataadmin/vendor/jqueryui/themes/flick/jquery-ui.min.css
+#            - bundles/sonatacore/vendor/select2/select2.css
+#            - bundles/sonatacore/vendor/select2/select2-bootstrap.css
+#            - bundles/sonataadmin/vendor/x-editable/dist/bootstrap3-editable/css/bootstrap-editable.css
+#            - bundles/sonataadmin/css/styles.css
+#            - bundles/sonataadmin/css/layout.css
+##            - bundles/sonatapage/sonata-page.back.min.css
+#
+#        javascripts:
+##            - assetic/sonata_admin_js.js
+##            - assetic/sonata_jqueryui_js.js
+##            - assetic/sonata_formatter_js.js
+##            - bundles/sonataformatter/vendor/ckeditor/ckeditor.js
+#
+#            - bundles/sonataadmin/vendor/jquery/dist/jquery.min.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.core.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.widget.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.mouse.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.draggable.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.droppable.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.resizable.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.selectable.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.sortable.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.accordion.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.autocomplete.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.button.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.datepicker.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.dialog.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-blind.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-bounce.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-clip.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-drop.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-explode.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-fade.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-fold.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-highlight.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-pulsate.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-scale.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-shake.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-slide.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-transfer.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.menu.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.position.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.progressbar.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.slider.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.spinner.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.tabs.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.tooltip.js
+#            - bundles/sonataadmin/vendor/jqueryui/ui/minified/i18n/jquery-ui-i18n.min.js
+#            - bundles/sonataadmin/vendor/jquery-form/jquery.form.js
+#            - bundles/sonataadmin/jquery/jquery.confirmExit.js
+#            - bundles/sonataadmin/vendor/jquery.scrollTo/jquery.scrollTo.js
+#            - bundles/sonatacore/vendor/bootstrap/dist/js/bootstrap.min.js
+#            - bundles/sonataadmin/vendor/x-editable/dist/bootstrap3-editable/js/bootstrap-editable.min.js
+#            - bundles/sonatacore/vendor/select2/select2.min.js
+#            - bundles/sonataadmin/vendor/admin-lte/dist/js/app.min.js
+#            - bundles/sonataadmin/Admin.js
 #            - bundles/sonataformatter/vendor/ckeditor/ckeditor.js
-
-            - bundles/sonataadmin/vendor/jquery/dist/jquery.min.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.core.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.widget.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.mouse.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.draggable.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.droppable.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.resizable.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.selectable.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.sortable.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.accordion.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.autocomplete.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.button.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.datepicker.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.dialog.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-blind.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-bounce.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-clip.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-drop.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-explode.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-fade.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-fold.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-highlight.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-pulsate.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-scale.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-shake.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-slide.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.effect-transfer.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.menu.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.position.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.progressbar.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.slider.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.spinner.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.tabs.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/jquery.ui.tooltip.js
-            - bundles/sonataadmin/vendor/jqueryui/ui/minified/i18n/jquery-ui-i18n.min.js
-            - bundles/sonataadmin/vendor/jquery-form/jquery.form.js
-            - bundles/sonataadmin/jquery/jquery.confirmExit.js
-            - bundles/sonataadmin/vendor/jquery.scrollTo/jquery.scrollTo.js
-            - bundles/sonatacore/vendor/bootstrap/dist/js/bootstrap.min.js
-            - bundles/sonataadmin/vendor/x-editable/dist/bootstrap3-editable/js/bootstrap-editable.min.js
-            - bundles/sonatacore/vendor/select2/select2.min.js
-            - bundles/sonataadmin/vendor/admin-lte/dist/js/app.min.js
-            - bundles/sonataadmin/Admin.js
-            - bundles/sonataformatter/vendor/ckeditor/ckeditor.js
-            - bundles/sonataformatter/vendor/markitup-markitup/markitup/jquery.markitup.js
-            - bundles/sonataformatter/markitup/sets/markdown/set.js
-            - bundles/sonataformatter/markitup/sets/html/set.js
-            - bundles/sonataformatter/markitup/sets/textile/set.js
-#            - bundles/sonatapage/sonata-page.back.js
+#            - bundles/sonataformatter/vendor/markitup-markitup/markitup/jquery.markitup.js
+#            - bundles/sonataformatter/markitup/sets/markdown/set.js
+#            - bundles/sonataformatter/markitup/sets/html/set.js
+#            - bundles/sonataformatter/markitup/sets/textile/set.js
+##            - bundles/sonatapage/sonata-page.back.js
