--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -17,3 +17,5 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
+    sonata_admin.title: "Admin title"
+    sonata_admin.logo_title: "web/bundles/sonataadmin/logo_title.png"
