--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "sonata-project/news-bundle": "^3.0",
-        "sonata-project/block-bundle": "^3.3"
+        "sonata-project/block-bundle": "^3.3",
+        "gedmo/doctrine-extensions": "^2.4",
+        "doctrine/doctrine-migrations-bundle": "^1.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
