--- a/app/config/sonata_media.yml
+++ b/app/config/sonata_media.yml
@@ -43,7 +43,7 @@ sonata_media:
     cdn:
         # define the public base url for the uploaded media
         server:
-            path:      %kernel.root_dir%/../web/uploads/media
+            path:      /uploads/media
 
     filesystem:
         # define where the uploaded file will be stored
